css/style.css
/* ... */
#gameInProgress h3
{
	font-weight: 400;
	font-family: 'Audiowide', sans-serif;
	font-size: 22px;
	width: var(--lobby-content-width);
}
#gameInProgress > div > p
{
	font-size: 20px;
	margin-top: 5px;
	border-bottom: 2px solid #fff;
}
#gameInProgress .roleTag
{
	display: inline-block;
	padding: 2px 5px;
	margin-top: 5px;
	cursor: default;
}
#gameInProgress .roleTag:hover { text-decoration: none }
#gameInProgress .button
{
	display: inline-block;
	width: 40%;
	font-size: 20px;
}
#btnResumeGame,
#btnAbandon > .confirmationButton
{ margin-right: 2% }
#btnAbandonGame,
#btnAbandon > .confirmationButton
{ background-color: rgb(204, 26, 29) }
#btnAbandonGame:hover,
#btnAbandon > .confirmationButton:hover
{ background-color: #ef282a }

.smallText { font-size: 12px }
.largeText { font-size: 18px }
.whiteText { color: #fff !important }
.italics { font-style: italic }
#container
{
	min-width: 1024px;
	max-width: 1920px;
}
html,
#curtain,
.veil,
.darkBlueBackground
{ background-color: var(--main-background-color) }
.centeredText { text-align: center }
#curtain
{
	position: fixed;
	width: 100%;
	height: 1080px;
	z-index: 50;
	padding: 5px;
}
#curtain h1,
#curtain h2,
#curtain h3
{ text-align: center }
#curtain h2,
#curtain h3
{ font-family: 'Oswald', sans-serif }
#curtain h1 { font-size: 60px }
#curtain h2 { font-size: 26px }
#curtain h3 { font-size: 16px; font-weight: 400; }
#curtain .button
{
	width: 26%;
	padding: 1%;
	margin: 3% 37%;
	font-size: 20px;
}
.pinpointRect,
.infectionRateHighlight,
.outbreaksHighlight,
.autoTreatCircle,
.autoTreatCureMarker,
#quarantineArea
{
	pointer-events: none;
}

.pinpointRect
{
	position: absolute;
	z-index: 1;
	border: 2px solid red;
}
#boardImg, #boardContainer
{
	position: absolute;
	width: var(--board-width-percentage);
}
#boardImg
{
	z-index: 0;
}
#boardContainer
{
	z-index: 1;
	font-size: 0;
	overflow: hidden;
	border-bottom: 1px solid #fff;
}
#boardContainer > div,
#boardContainer > .pawn,
#boardContainer > .researchStation,
#boardContainer > .diseaseCube
{ position: absolute }
#boardContainer > .diseaseCube.infecting,
#boardContainer > .diseaseCube.removing
{ z-index: 7 }

#travelPathArrowContainer
{
	position: relative;
	z-index: 6;
	opacity: 0.7;
	filter: drop-shadow(0px 0px 3px #fff);
	pointer-events: none;
}
#travelPathArrow.invalid { background-color: darkred !important }
#boardContainer > .pawn
{
	z-index: 4;
	width: 1.6%;
}
.pawn.ui-draggable:not(.ui-draggable-disabled) { cursor: grab }
.pawnArrow,
#resilientPopulationArrow,
#governmentGrantArrow
{
	width: 3%;
	background-color: transparent;
	z-index: 7;
	pointer-events: none;
}
.pawnArrow.dispatch { width: 2% }
.pawnArrow > div,
#resilientPopulationArrow > div,
#governmentGrantArrow > div
{
	width: 100%;
	height: 100%;
}
.pawnArrow > div,
#governmentGrantArrow > div
{
	clip-path: polygon(50% 30%, 100% 10%, 50% 100%, 0 10%);
}
.pawnArrow.dispatch > div { clip-path: polygon(50% 30%, 100% 10%, 50% 100%, 0 10%) }
#resilientPopulationArrow,
#governmentGrantArrow
{
	width: 4%;
	filter: drop-shadow(0px 0px 3px #fff);
}
#resilientPopulationArrow > div { clip-path: polygon(50% 0%, 100% 90%, 50% 70%, 0 90%) }
.researchStation
{
	z-index: 3;
	width: 3%;
}
.researchStation img
{
	width: 100%;
	pointer-events: none;
}
.researchStation.relocatable,
.grantStation
{
	cursor: grab;
}
.dragging,
.pawn.ui-draggable.dragging
{ cursor: grabbing }
.grantStation
{
	z-index: 6;
	opacity: 0.7;
}
.diseaseCube
{
	z-index: 5;
	background-color: transparent !important;
}
.cubeToRemove
{
	cursor: pointer;
	z-index: 6;
}
.diseaseCube *
{
	width: 100%;
	height: 100%;
	margin-bottom: -100%;
	pointer-events: none;
}
.cubeSlash, .cubeBackground { background: #fff }
.diseaseCube.y .cubeSlash, .diseaseCube.y .cubeBackground { background: #000 }
.cubeSlash { clip-path: polygon(6% 0, 0 6%, 45% 50%, 0 94%, 6% 100%, 50% 56%, 94% 100%, 100% 94%, 56% 50%, 100% 6%, 94% 0, 50% 44%) }
.cubeBackground { clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%) }
.cubeTop { clip-path: polygon(50% 4%, 94% 25%, 50% 48%, 6% 25%) }
.cubeLeft { clip-path: polygon(4% 74%, 48% 96%, 48% 52%, 4% 28%) }
.cubeRight { clip-path: polygon(96% 74%, 52% 96%, 52% 52%, 96% 28%) }

.diseaseCube.y .cubeTop,
.diseaseCube.y .cubeRight,
.diseaseCube.y .cubeLeft
{ background: #fded3c }
.yBorder { border: 2px solid #fded3c }
.diseaseCube.r .cubeTop,
.diseaseCube.r .cubeRight,
.diseaseCube.r .cubeLeft
{ background: #ef282a }
.rBorder { border: 2px solid #ef282a }
.diseaseCube.u .cubeTop,
.diseaseCube.u .cubeRight,
.diseaseCube.u .cubeLeft
{ background: #405fb1 }
.uBorder { border: 2px solid #405fb1 }
.diseaseCube.b .cubeTop,
.diseaseCube.b .cubeRight,
.diseaseCube.b .cubeLeft
{ background: #212121 }
.bBorder { border: 2px solid #000 }

.groupInfRate .diseaseCube
{
	vertical-align: middle;
	display: inline-block;
	width: 9%;
	margin-right: 4%;
}
.diseaseCube.w * { background-color: #fff }
.diseaseCube.w .cubeBackground { background-color: #000 }

.hidden,
#btnCancelAction.hidden
{ display: none !important }
.y:not(.diseaseCube)
{
	background: linear-gradient(to right,
		#cab900,	
		#fded3c,
		#fded3c,
		#cab900);
	color:black;
}
.u:not(.diseaseCube)
{
	background: linear-gradient(to right,
		#3254af,	
		#405fb1,
		#405fb1,
		#3254af)
}
.b:not(.diseaseCube)
{
	background: linear-gradient(to right,
		#0e0e0e,	
		#212121,
		#212121,
		#0e0e0e)
}
.r:not(.diseaseCube):not(span)
{
	background: linear-gradient(to right,
		#b10e10,	
		#ef282a,
		#ef282a,
		#b10e10)
}
.white{background-color:#fff}
.black{background-color:#000}
.epidemic:not(.substep),
.epidemicFull
{
	background: linear-gradient(to right,
		#007738,	
		var(--epidemic-green),
		var(--epidemic-green),
		#007738)
}
.lightGreen { color: var(--epidemic-green) }
.lightGreenBackground { background-color: var(--epidemic-green) }
.darkGreenBorder { border: 2px solid #01863f }
.researchStationBackground { background-color: #e9cf94 }
span.r, p.r {color: #ef282a; background: none !important }
/* ... */

